...
            ),
          ),
          title: Text(context.l10n.myExpenses),
          actions: [
            if (_hasChanges || isProcessing)
              _SaveTransactionButton(
                key: const Key('save_transaction_button'),
                () => doProcessing(() => _save(context)),
              ),
          ],
        ),
        body: Column(
          crossAxisAlignment: CrossAxisAlignment.stretch,
          children: [
            ...ListTile.divideTiles(
              context: context,
              tiles: [
                // Счет
                ListTile(
                  key: const Key('account_tile'),
                  onTap: _selectAccount,
                  title: Row(
                    children: [
                      Text(context.l10n.account),
                      if (_account != null)
                        Expanded(
...
                    Icons.chevron_right,
                    color: colorScheme.outline.withValues(alpha: AppSizes.double03),
                  ),
                ),
                // Статья
                ListTile(
                  key: const Key('category_tile'),
                  onTap: _selectTransactionCategory,
                  title: Row(
                    children: [
                      Text(context.l10n.article),
                      if (_transactionCategory != null)
                        Expanded(
...
                // Сумма
                AnimatedSize(
                  duration: const Duration(milliseconds: 200),
                  child: _account == null
                      ? const SizedBox.shrink()
                      : ListTile(
                          key: const Key('amount_tile'),
                          onTap: () => _selectAmount(_account!.currency),
                          title: Row(
                            children: [
                              Text(context.l10n.amount),
                              Expanded(
                                child: Align(
...
                            ],
                          ),
                        ),
                ),
                // Дата
                ListTile(
                  key: const Key('date_tile'),
                  onTap: _selectDate,
                  title: Row(
                    children: [
                      Text(context.l10n.date),
                      const Spacer(),
                      Text(_transactionDate.ddMMyyyy),
                    ],
                  ),
                ),
                // Время
                ListTile(
                  key: const Key('time_tile'),
                  onTap: _selectTime,
                  title: Row(
                    children: [
                      Text(context.l10n.time),
                      const Spacer(),
                      Text(_transactionDate.hhmm),
                    ],
                  ),
                ),
                // Комментарий
                ListTile(
                  key: const Key('comment_tile'),
                  onTap: _selectComment,
                  title: _comment?.trim().isEmpty ?? true ? Text(context.l10n.comment) : Text(_comment!),
                ),
              ],
            ),
            const Divider(),
...
  }

  @override
  Widget build(BuildContext context) => AlertDialog(
        title: Text(context.l10n.inputAmount),
        content: TextFormField(
          key: const Key('amount_input_field'),
          onChanged: _onChanged,
          initialValue: NumberFormat.decimalPattern(context.l10n.localeName).format(_amount),
          keyboardType: const TextInputType.numberWithOptions(decimal: true),
          decoration: InputDecoration(
            suffixText: widget.currency.symbol,
          ),
...
            FilteringTextInputFormatter.allow(RegExp(r'[\d.,]')),
            DecimalSanitizerFormatter(fractionalLength: 1, decimalSeparator: _decimalSeparator),
          ],
        ),
        actions: [
          TextButton(
            key: const Key('confirm_button'),
            onPressed: _amount == widget.inputAmount ? null : () => context.maybePop(_amount),
            child: Text(context.l10n.save),
          ),
          TextButton(
            key: const Key('cancel_button'),
            onPressed: () => context.maybePop(),
...
