...
          ),
        ),
        floatingActionButton: BlocBuilder<AccountBloc, AccountState>(
          builder: (context, accountState) => accountState.account == null
              ? const SizedBox.shrink()
              : FloatingActionButton(
                  key: Key(isIncome ? 'fab_income' : 'fab_expense'),
                  heroTag: 'hero_add_transaction_isIncome_$isIncome',
                  onPressed: () => _onAddTransactionTap(context),
                  child: const Icon(Icons.add),
                ),
        ),
      );
...
